--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,9 +10,10 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>
+		  Az oldal működéséhez elengedhetetlen a JavaScript használata. Kérlek engedélyezd a böngésződben!
+		</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
